--- a/src/pages/feedbacks/index.module.scss
+++ b/src/pages/feedbacks/index.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     overflow: hidden;
     position: relative;
-    z-index: 20;
+    z-index: 9;
     height: 100vh;
     .contentWrapper {
         position: relative;
